[project]
name = "speed-camera-analysis-marimo"
version = "0.1.0"
description = "Interactive speed camera effectiveness analysis built with marimo"
requires-python = ">=3.12"
dependencies = [
    "marimo",
    "pandas",
    "geopandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "shapely",
    "folium",
]
